--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,19 +1,17 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Tutorial Astro</title>
+		<title>About Astro</title>
 	</head>
 	<body>
-		<h1>El meu lloc Astro</h1>
+		<h1>Això és l'about del Astro </h1>
 		<a href="/">Home</a>
 		<a href="/About/">About</a>
         <a href="/Blog/">Blog</a>
+		<h2>Tot això és HTML, així que de moment no hi ha res de nou</h2>
+		<p>Va bé per refrescar tot el que he fet fins ara</p>
 	</body>
 </html>
