--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,19 +1,17 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Tutorial Astro</title>
+		<title>Blog Astro</title>
 	</head>
 	<body>
-		<h1>El meu lloc Astro</h1>
+		<h1>Blog Astro </h1>
 		<a href="/">Home</a>
-		<a href="/About/">About</a>
+        <a href="/About/">About</a>
         <a href="/Blog/">Blog</a>
+		<h2>Podria realment posar alguna cosa aqui?</h2>
+		<p>Es la meva primera pàgina penjada aquí per internet. Podria parlar o explicar coses.</p>
 	</body>
 </html>
