--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,17 +1,25 @@
+---
+const pageTitle = "El meu blog Astro";
+---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>Blog Astro </h1>
+		<h1>{pageTitle}</h1>
 		<a href="/">Home</a>
-        <a href="/About/">About</a>
-        <a href="/Blog/">Blog</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 		<h2>Podria realment posar alguna cosa aqui?</h2>
 		<p>Es la meva primera pàgina penjada aquí per internet. Podria parlar o explicar coses.</p>
+        <ul>
+            <li><a href="/posts/post-1/">El meu primer post</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
 	</body>
 </html>
