--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "El meu tutorial Astro";
 ---
 
 <html lang="en">
@@ -8,12 +8,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Tutorial Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>El meu lloc Astro</h1>
+		<h1>{pageTitle}</h1>
 		<a href="/">Home</a>
-		<a href="/About/">About</a>
-        <a href="/Blog/">Blog</a>
+		<a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 	</body>
 </html>
