--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,25 +1,35 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
 const pageTitle = "El meu blog Astro";
 ---
+
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<h1>{pageTitle}</h1>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-		<h2>Podria realment posar alguna cosa aqui?</h2>
-		<p>Es la meva primera pàgina penjada aquí per internet. Podria parlar o explicar coses.</p>
+    <head>
+        <Header />
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{pageTitle}</title>
+    </head>
+    <body>
+        <h1>{pageTitle}</h1>
+        <h2>Podria realment posar alguna cosa aqui?</h2>
+        <p>
+            Es la meva primera pàgina penjada aquí per internet. Podria parlar o
+            explicar coses.
+        </p>
         <ul>
             <li><a href="/posts/post-1/">El meu primer post</a></li>
             <li><a href="/posts/post-2/">Post 2</a></li>
             <li><a href="/posts/post-3/">Post 3</a></li>
         </ul>
-	</body>
+        <Footer />
+        <script> /* Fa que els links de navegació desapareixin quan el tamany del navegador és massa petit */
+            import "../scripts/menu.js";
+        </script>
+    </body>
 </html>
