--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
 const pageTitle = "El meu tutorial Astro";
 ---
 
 <html lang="en">
 	<head>
+		<Header />
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
@@ -12,8 +17,9 @@ const pageTitle = "El meu tutorial Astro";
 	</head>
 	<body>
 		<h1>{pageTitle}</h1>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<Footer />
+		<script> /* Fa que els links de navegació desapareixin quan el tamany del navegador és massa petit */
+			 import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
