--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,7 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
-
-const pageTitle = "El meu tutorial Astro";
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "Pàgina principal";
 ---
-
-<html lang="en">
-	<head>
-		<Header />
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<h1>{pageTitle}</h1>
-		<Footer />
-		<script> /* Fa que els links de navegació desapareixin quan el tamany del navegador és massa petit */
-			 import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>Subtitol de prova de Layout</h2>
+</BaseLayout>
