--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const allPosts = await Astro.glob('./posts/*.md');
+import BlogPost from "../components/BlogPost.astro";
+const allPosts = await Astro.glob('./posts/*.md'); /*Crea un arxiu de array d'objectes, en aquest cas, de posts de blog*/
 import "../styles/global.css";
 
 const pageTitle = "El meu blog Astro";
@@ -13,6 +14,6 @@ const pageTitle = "El meu blog Astro";
             explicar coses.
         </p>
         <ul>
-            {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
-        </ul>
+            {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)} <!-- El que hi havia abans es troba a BlogPost.astro. -->
+        </ul>                                                                                    <!-- Literalment el mateix, però l'hem convertit en un component. -->
 </BaseLayout>
